# i18n-workshop

./: .gitignore  README.md
applications/js-i18n-hello-world/: index.html
applications/js-i18n-hello-world/js/: main.js
applications/js-i18n-hello-world/js/nls/: main.js
applications/js-i18n-hello-world/js/nls/hu/: main.js
applications/vala-hello-world/: COPYING  meson.build
applications/vala-hello-world/data/: meson.build  org.gnome.Vala-Hello-World.appdata.xml.in  org.gnome.Vala-Hello-World.desktop.in  org.gnome.Vala-Hello-World.gschema.xml
applications/vala-hello-world/po/: POTFILES  hu.po  meson.build  vala-hello-world.pot
applications/vala-hello-world/src/: main.vala  meson.build  vala-hello-world.gresource.xml  window.ui  window.vala
applications/vala-hello-world/vapi/: config.vapi
presentation/: presentation.tex
